# indicators

./: .gitignore  CMakeLists.txt  GAZP.csv  Menu.cpp  Menu.h  README.md  SMA30_GAZP_OPEN2.csv  Stock.cpp  Stock.h  Untitled.ipynb  candle.cpp  candle.h  indicator.cpp  indicator.h  main.cpp  test_my_methods.ipynb  utilites.h
project/include/: Menu.h  Stock.h
project/src/: Menu.cpp  Stock.cpp  indicator.cpp  main.cpp
tables/: GAZP_PY.csv  MTSS.csv  MTSS_PY.csv  gazp_sma30.csv  mtss_sma30.csv
